Fix dark mode attr css

--- a/assets/github.css
+++ b/assets/github.css
@@ -32,7 +32,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 		--string-color: #d14;
 		--title-color: #900;
 		--type-color: #458;
-		--attr-color: #000080;
+		--attr-color: #4b4bf2;
 		--gh-link-color: #009926;
 		--symbol-color: #990073;
 		--builtin-color: #0086b3;
